--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "The backend of a restaurant named El Bosque using express",
   "main": "src/server.js",
   "scripts": {
-    "dev": "nodemon server.js",
-    "start": "node server.js",
+    "dev": "nodemon src/server.js",
+    "start": "node src/server.js",
     "lint": "eslint"
   },
   "repository": {
@@ -32,8 +32,12 @@
   },
   "dependencies": {
     "@hapi/boom": "^10.0.0",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "faker": "^5.5.3",
     "joi": "^17.6.0"
+  },
+  "engines": {
+    "node": "17.x"
   }
 }
