--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
-// DOCKER
+PORT=3000
+DB_USER='bosque_admin'
+DB_PASSWORD='bosque123'
+DB_HOST='localhost'
 DB_NAME='bosque_db'
-DB_USER="bosque_admin"
-DB_PASSWORD='14db7d47-f442-4a90-b633-2a537c8b5c13'
+DB_PORT='5432'
